syntax = "proto3";

package proto;

option go_package = "proto";

message Employee{
    int32 id = 1;
    string name = 2;
    string dept = 3;
    repeated string skills = 4;
}

message ID{
    int32 id = 1;
}

service EmployeeService {
    rpc CreateEmployee (Employee) returns (ID) {}
    rpc GetEmployee (ID) returns (Employee) {}
    rpc UpdateEmployee (Employee) returns (ID) {}
    rpc DeleteEmployee (ID) returns (ID) {}
}